--- a/imm_ptl_core/src/main/resources/assets/immersive_portals/lang/en_us.json
+++ b/imm_ptl_core/src/main/resources/assets/immersive_portals/lang/en_us.json
@@ -76,7 +76,7 @@
   "imm_ptl.enabled": "Enabled",
   "imm_ptl.disabled": "Disabled",
   "imm_ptl.loading_datapack_dimensions": "Loading Datapack Dimensions",
-  "imm_ptl.memory_not_enough": "[Immersive Portals] Memory seems not enough. If you experience GC lag, try to shrink render distance or allocate more memory.",
+  "imm_ptl.memory_not_enough": "[Immersive Portals] Memory is low. Try lowering the render distance, or contact server owner for advice.",
   "imm_ptl.command_stick": "Immersive Portals Command Stick",
   "imm_ptl.command.delete_portal": "Delete the portal entity",
   "imm_ptl.command_desc.delete_portal": "Delete the one-way one-faced portal component",
@@ -126,12 +126,12 @@
   "imm_ptl.command_desc.accelerate50": "Fly!",
   "imm_ptl.command.accelerate200": "Accelerate 200",
   "imm_ptl.command_desc.accelerate200": "Fly!",
-  "imm_ptl.about_lag": "[Immersive Portals] Portals abruptly load many chunks and may cause lag spikes. The lag will probably disappear after playing for 1 or 2 minutes.",
+  "imm_ptl.about_lag": "[Immersive Portals] New portals can cause lag. This is temporary.",
   "imm_ptl.portal_helper_not_linked": "No compatible portal helper frame can be found nearby. A new frame has been generated. It can only link to a frame with compatible shape. 1x3 can link to 2x6, but 1x2 cannot link to 2x5. It can only link to a frame nearby. If you want it to link to a far place, use commands.",
-  "imm_ptl.preview_warning": "You are using a preview version of Immersive Portals mod which is not yet stable. Report issues:",
+  "imm_ptl.preview_warning": "You are using a preview version of Immersive Portals mod. Report issues:",
   "imm_ptl.dim_stack_established": "Dimension stack has been setup. The bedrock in existing generated chunks will be unchanged. Newly generated bedrock will be replaced by obsidian.",
   "imm_ptl.dim_stack_removed": "Dimension stack has been removed. (The obsidian in existing generated chunks will be unchanged.)",
   "imm_ptl.cannot_connect_to_vanilla_portal": "[Immersive Portals] Note: The nether portal cannot connect to a vanilla portal. It can only link to an empty obsidian frame with the same shape and orientation.",
   "imm_ptl.fabulous_warning": "[Immersive Portals] With Immersive Portals installed, when graphic mode is \"fabulous\", the transparency rendering may be broken in some hardware. It's not recommended to use \"fabulous\" mode. And shaders make the game more fabulous than the vanilla \"fabulous\" mode.",
-  "imm_ptl.intel_warning": "[Immersive Portals] You are using Intel videocard. GUI rendering may be abnormal. The issue is still under investigation."
+  "imm_ptl.intel_warning": "[Immersive Portals] You are using Intel video card. GUI rendering may be abnormal. The issue is still under investigation."
 }
